# wgpu-block-engine

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: chunk.rs  main.rs  network.rs  render.rs
client/src/core/: chunk.rs  mod.rs  render.rs  shader.wgsl
playground/: Cargo.toml
playground/src/: main.rs
server/: Cargo.toml
server/src/: frontend.rs  main.rs  network.rs
server/src/core/: mod.rs
server/src/network/: client.rs  mod.rs
shared/: Cargo.toml
shared/src/: chunk.rs  lib.rs  protocol.rs
src/: chunk.rs  main.rs  render.rs  shader.wgsl
