[package]
name = "wgpu-block-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wgpu]
version = "0.13.0"

[dependencies.winit]
version = "0.26.1"
default-features = false
features = ["x11", "wayland"]

[dependencies.glam]
version = "0.21.2"
features = ["bytemuck"]

[dependencies.tokio]
version = "1.19.2"
features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "net",
  "time",
  "macros",
  "sync",
  "fs",
  "test-util",
  "parking_lot",
]

[dependencies.tracing]
version = "0.1.35"
features = ["log"]

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["env-filter"]

[dependencies.bytemuck]
version = "1.9.1"
features = ["derive"]

[dependencies]
anyhow = "1.0"
