[package]
name = "wgpu-block-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wgpu-block-shared]
path = "../shared"

[dependencies.wgpu]
version = "0.13.1"

[dependencies.winit]
version = "0.26.1"
default-features = false
features = ["x11", "wayland"]

[dependencies.glam]
version = "0.21.2"
features = ["bytemuck"]

[dependencies.noise]
git = "https://github.com/Razaekel/noise-rs.git"
branch = "develop"

[dependencies.image]
version = "0.24.2"
default-features = false
features = ["png"]

[dependencies.tokio]
version = "1.19.2"
features = ["full"]

[dependencies.tracing]
version = "0.1.35"
features = ["log"]

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["env-filter"]

[dependencies.bytemuck]
version = "1.9.1"
features = ["derive"]

[dependencies.anyhow]
version = "1.0"

[dependencies.itertools]
version = "0.10"

[dependencies.hashbrown]
version = "0.12"
