[package]
name = "wgpu-block-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu-block-shared = { path = "../shared" }

# Basics
tokio = { version = "1.20", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10"
hashbrown = "0.12"

# Graphics
wgpu = "0.13"
winit = { version = "0.26", default-features = false, features = [
    "x11",
    "wayland",
] }
image = { version = "0.24", default-features = false, features = ["png"] }

# Math
glam = { version = "0.21", features = ["bytemuck"] }
noise = { git = "https://github.com/Razaekel/noise-rs.git", branch = "develop" }

# Network
quinn = "0.8"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rcgen = "0.9"

# Serialization
serde = { version = "1.0", features = ["serde_derive"] }
bincode = "1.3"
bytemuck = { version = "1.11", features = ["derive"] }
