[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basics
tokio = { version = "1.20", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0"

# Network
quinn = "0.8"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }

# Serialization
serde = { version = "1.0", features = ["serde_derive"] }
bincode = "1.3"
