[package]
name = "wgpu-block-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wgpu-block-shared]
path = "../shared"

[dependencies.spin_sleep]
version = "1.1.1"

[dependencies.glam]
version = "0.21.2"
features = ["bytemuck"]

[dependencies.noise]
git = "https://github.com/Razaekel/noise-rs.git"
branch = "develop"

[dependencies.tracing]
version = "0.1.35"
features = ["log"]

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["env-filter"]

[dependencies.anyhow]
version = "1.0"

[dependencies.itertools]
version = "0.10"

[dependencies.hashbrown]
version = "0.12"

[dependencies.tokio]
version = "1.19.2"
features = ["full"]
