[package]
name = "wgpu-block-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.noise]
git = "https://github.com/Razaekel/noise-rs.git"
branch = "develop"

[dependencies.tracing]
version = "0.1.35"
