[package]
name = "wgpu-block-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = { git = "https://github.com/Razaekel/noise-rs.git", branch = "develop" }
tracing = "0.1"

# Basics
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["serde_derive"] }
bincode = "1.3"
bytemuck = { version = "1.11", features = ["derive"] }
bytes = "1.2"

# Network
quinn = "0.8"
tokio-util = { version = "0.7", features = ["full"] }
